<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="152dp"
        android:layout_height="74dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/name2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="160dp"
        android:layout_height="76dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/name2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="186dp"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="183dp"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="199dp"
        android:layout_height="37dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="234dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="130dp"
        android:layout_height="59dp"
        android:text="@string/name6"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="350dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:text="@string/name7"
        tools:layout_editor_absoluteX="237dp"
        tools:layout_editor_absoluteY="349dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="130dp"
        android:layout_height="59dp"
        android:text="@string/name10"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="459dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="142dp"
        android:layout_height="58dp"
        android:text="@string/name9"
        tools:layout_editor_absoluteX="237dp"
        tools:layout_editor_absoluteY="460dp" />
</androidx.constraintlayout.widget.ConstraintLayout>